<resources>
    <string name="app_name">RAF E-Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_add">New entry</string>
    <string name="title_list">List</string>
    <string name="title_profile">Profile</string>
    <string name="input_description_hint">Description</string>
    <string name="input_quantity_hint">Value</string>
    <string name="input_title_hint">Title</string>
    <string name="input_audio_text">Audio</string>
    <string name="input_button_text">Add to list</string>
    <string name="input_header_text">New income/outcome</string>
    <string name="home_info_text">Total account balance</string>
    <string name="home_income_text">Income:</string>
    <string name="home_outcome_text">Outcome:</string>
    <string name="home_difference_text">Difference:</string>
    <string name="title_activity_login">RAF E-Wallet</string>
    <string name="login_info_text">Wallet system for RAF students</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_bank">Bank name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_surname">Not a valid surname</string>
    <string name="invalid_bank">Not a valid bank</string>
    <string name="invalid_password_short">Password must be >5 characters</string>
    <string name="invalid_password_match">Password does not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_info_text">User information</string>
    <string name="profile_name_text">Name:</string>
    <string name="profile_surname_text">Surname:</string>
    <string name="profile_bank_text">Bank:</string>
    <string name="profile_button_edit_text">Edit</string>
    <string name="profile_button_logout_text">Logout</string>
    <string name="list_tab_income_text">Income</string>
    <string name="list_tab_outcome_text">Outcome</string>
    <string name="new_entry_title_required">Title is required</string>
    <string name="new_entry_value_required">Value is required</string>
    <string name="new_entry_description_required">Description is required</string>
    <string name="new_entry_audio_required">Audio is required</string>
    <string name="new_entry_value_format">Value is in bad format</string>
    <string name="new_entry_success">Entry successfully added</string>
    <string name="edit_entry_title_text">Edit entry</string>
    <string name="edit_entry_title_tv">Title:</string>
    <string name="edit_entry_value_tv">Value:</string>
    <string name="edit_entry_description_tv">Description:</string>
    <string name="edit_entry_cancel_button">Cancel</string>
    <string name="edit_entry_edit_button">Edit</string>
    <string name="profile_name_required">Name is required</string>
    <string name="profile_surname_required">Surname is required</string>
    <string name="profile_bank_required">Bank is required</string>
    <string name="entry_details_info_text">Income/outcome details</string>
    <string-array name="new_entry_spinner_items">
        <item>Income</item>
        <item>Outcome</item>
    </string-array>
</resources>