<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.edit.EditIncomeActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/edit_entry_title_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_entry_title_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_entry_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_entry_cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/edit_entry_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_entry_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edit_entry_description"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/input_text_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/input_description_hint"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:windowSoftInputMode="adjustNothing" />

        <ImageView
            android:id="@+id/edit_entry_audio_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/input_description_hint"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_profile_black_24dp"
            android:visibility="gone" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_entry_value_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/input_quantity_hint"
        android:inputType="number"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <EditText
        android:id="@+id/edit_entry_title_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/input_title_hint"
        android:inputType="textPersonName"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toTopOf="@+id/edit_entry_value_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_entry_title_tv"
        app:layout_constraintBottom_toTopOf="@+id/edit_entry_value_edit_text"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_entry_value_tv"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/edit_entry_description_tv"
        app:layout_constraintBottom_toTopOf="@+id/edit_entry_linear_layout"
        app:layout_constraintStart_toStartOf="@+id/edit_entry_linear_layout" />

    <Button
        android:id="@+id/edit_entry_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_entry_edit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>